mac prinf tester ok

--- a/printf/Makefile
+++ b/printf/Makefile
@@ -22,8 +22,8 @@ OBJS		= ${SRCS:.c=.o}
 BONUS_OBJS	= ${BONUS:.c=.o}
 
 ifdef WITH_BONUS
-	SRCS += ${BONUS}
-	OBJS += ${BONUS_OBJS}
+	SRCS = ${BONUS}
+	OBJS = ${BONUS_OBJS}
 endif
 
 NAME		= libftprintf.a
