push_swap format

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: string <string>                            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/09/18 16:39:58 by string            #+#    #+#              #
+#    Updated: 2023/09/18 16:40:01 by string           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 
 SRC	=	push_swap.c \
 		operations.c \
